--- a/package.json
+++ b/package.json
@@ -20,13 +20,19 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/barcode-scanner": "^4.11.0",
+    "@ionic-native/camera": "^4.11.0",
     "@ionic-native/core": "~4.10.0",
+    "@ionic-native/qr-scanner": "^4.11.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "^2.1.3",
     "cordova-sqlite-storage": "^2.3.3",
+    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-qrscanner": "^2.6.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "phonegap-plugin-barcodescanner": "^8.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -39,7 +45,10 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-qrscanner": {},
+      "cordova-plugin-camera": {},
+      "phonegap-plugin-barcodescanner": {}
     }
   }
 }
